# faurge

./: .env.example  .gitignore  README.md  goal.md  implementation_plan.md  requirements-dev.txt  requirements.txt  system_prompt.md  untitled:plan-addClusterToUrsula.prompt.md  ursula_diagnosis.md  ursula_training_analysis.md
agents/: __init__.py  fabian.md  ursula.py
core/: bake_orchestrator.py  clap_utils.py  cluster_assigner.py  defaults.py  hardware_detect.py  health_endpoints.py  logging.py  memory_tracker.py  settings.py  shadow_capture.py  vram_policy.py  watchdog.py
core/schemas/: settings_schema_v1.json
docs/: agents_flow.md  fabian.md  genesis.md  goal.md  phases.md  ursula.md
dsp/compressor/: CMakeLists.txt
dsp/compressor/include/faurge/: comp_metrics.hpp  comp_types.hpp  compressor.hpp  envelope.hpp  gain_computer.hpp
dsp/compressor/src/: comp_metrics.cpp  compressor.cpp  envelope.cpp  gain_computer.cpp  main.cpp
dsp/compressor/test/: test_detector.cpp  test_lookahead.cpp  test_passthrough.cpp  test_pumping.cpp  test_sidechain.cpp  test_stereo_link.cpp
dsp/eq/: CMakeLists.txt
dsp/eq/include/faurge/: biquad.hpp  eq.hpp  eq_metrics.hpp  eq_types.hpp
dsp/eq/src/: biquad.cpp  eq.cpp  eq_metrics.cpp  main.cpp
dsp/eq/test/: test_dynamic.cpp  test_notch.cpp  test_skew.cpp  test_sweep.cpp
dsp/esser/: CMakeLists.txt
dsp/esser/include/faurge/: biquad.hpp  esser.hpp  esser_metrics.hpp  esser_types.hpp  sibilance_detector.hpp
dsp/esser/src/: biquad.cpp  esser.cpp  esser_metrics.cpp  main.cpp  sibilance_detector.cpp
dsp/esser/test/: test_gated.cpp  test_ratio_one.cpp  test_vs_eq.cpp
dsp/gain/: CMakeLists.txt
dsp/gain/include/faurge/: gain.hpp  gain_metrics.hpp  gain_types.hpp
dsp/gain/src/: gain.cpp  gain_metrics.cpp  main.cpp
dsp/limiter/: CMakeLists.txt
dsp/limiter/include/faurge/: biquad.hpp  lim_types.hpp  limiter.hpp  limiter_metrics.hpp  oversampler.hpp  peak_predictor.hpp
dsp/limiter/src/: biquad.cpp  limiter.cpp  limiter_metrics.cpp  main.cpp  oversampler.cpp  peak_predictor.cpp
dsp/saturator/: CMakeLists.txt
dsp/saturator/include/faurge/: biquad.hpp  sat_metrics.hpp  sat_types.hpp  saturator.hpp  waveshaper.hpp
dsp/saturator/src/: biquad.cpp  main.cpp  sat_metrics.cpp  saturator.cpp  waveshaper.cpp
dsp/transient/: CMakeLists.txt
dsp/transient/include/faurge/: transient.hpp  transient_metrics.hpp  transient_splitter.hpp  transient_types.hpp
dsp/transient/src/: main.cpp  transient.cpp  transient_metrics.cpp  transient_splitter.cpp
kaggle/: 01_acquire_and_augment.ipynb  01_acquire_and_augment2.ipynb  01_acquire_and_augment_run_1.ipynb  _build_01_notebook.py  paths.txt
kaggle/01/: 01.md  01_acquire_and_augment.ipynb  01_acquire_and_augment2.ipynb  01_cluster_speakers.py  _build_01_notebook.py
kaggle/01/001_cluster_speakers/: cell_4.py
kaggle/01/002_generate_degraded_pairs/: cell_1.py  cell_2.py  cell_3.py  cell_4.py
kaggle/01/01_cluster_speakers/: cell_2.py  cell_3.py
kaggle/01/docs/: 01.md  paths.md
kaggle/01_docs/: 01.md
kaggle/02/: 01_acquire_and_augment.ipynb  02.md  MIGRATION_NOTE.md
kaggle/ursula/: paths.md
kaggle/ursula/01_cluster_speakers/: cell_1.py
kaggle/ursula/02_generate_degraded_pairs/: 02_cell_2.py  02_cell_3.py  cell_2.py  cell_3.py  cell_4.py
kaggle/ursula/03_extract_metrics/: 03_cell_3.py  cell_1.py  cell_2.py  cell_3.py
kaggle/ursula/04_define_ursula/: 04_cell_1.py  04_cell_2.py  04_cell_3.py  04_cell_4.py  cell_1.py  cell_2.py  cell_3.py  cell_4.py
kaggle/ursula/05_build_gym_env/: 05_cell_1.py  05_cell_2.py  05_cell_3.py  05_cell_4.py  cell_1.py  cell_2.py  cell_3.py
kaggle/ursula/06_train_ursula/: cell_1.py  cell_2.py  cell_3.py  cell_4.py  cell_5.py
kaggle/ursula/06_train_ursula_a/: 06a_cell_1.py  06a_cell_2.py  06a_cell_3.py  06a_cell_4.py  cell_1.py  cell_2.py  cell_3.py  cell_4.py  diagnose.py  scratch.py
kaggle/ursula/06_train_ursula_b/: 06b_cell_1.py  06b_cell_2.py  06b_cell_3.py  06b_cell_4.py  06b_cell_5.py
plugins/declipper/: CMakeLists.txt  README.md
plugins/declipper/include/faurge/: clip_detector.hpp  metrics.hpp  reconstructor.hpp
plugins/declipper/src/: clip_detector.cpp  declipper.cpp  main.cpp  metrics.cpp  post_filter.cpp
plugins/declipper/test/: test_detector.cpp
plugins/denoiser/: CMakeLists.txt  README.md
plugins/denoiser/include/faurge/: denoise_metrics.hpp  denoise_types.hpp  denoiser.hpp  noise_estimator.hpp
plugins/denoiser/rust/: Cargo.toml  cbindgen.toml
plugins/denoiser/rust/src/: lib.rs
plugins/denoiser/src/: denoise_metrics.cpp  denoiser.cpp  main.cpp  noise_estimator.cpp
plugins/denoiser/test/: generate_noisy.cpp  test_attenuation.cpp  test_bridge.cpp  test_noise_estimator.cpp  test_pipeline.cpp  test_resampling.cpp
plugins/exciter/: CMakeLists.txt
plugins/exciter/include/faurge/: crossover_filter.hpp  exciter.hpp  exciter_metrics.hpp  exciter_types.hpp  high_band.hpp  low_band.hpp
plugins/exciter/src/: crossover_filter.cpp  exciter.cpp  exciter_metrics.cpp  high_band.cpp  low_band.cpp  main.cpp
plugins/exciter/test/: generate_pairs.cpp  test_high_band.cpp  test_low_band.cpp  test_metrics.cpp  test_pipeline.cpp
scripts/: install_dependencies.sh  pipewire_compat_check.py  reset_pipewire.sh  setup_pipewire.sh  setup_realtime_kernel.sh  validate_environment.py  vram_budget.py
specialists/declipper/: README.md
specialists/declipper/include/faurge/: clip_region.hpp  declipper.hpp  post_filter.hpp
specialists/declipper/src/: reconstructor.cpp
specialists/declipper/test/: generate_clipped.cpp  test_pipeline.cpp  test_reconstructor.cpp
state/: budget_audit.json
systemd/: faurge-watchdog.service
tests/: test_core_config.py  test_pipewire_routing.py  test_vram_budget.py
