[package]
name = "df_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet", features = ["tract", "default-model"] }
ndarray = "0.15"
tract-core = "=0.21.4"
tract-onnx = "=0.21.4"
tract-pulse = "=0.21.4"
tract-hir = "=0.21.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
